# ganithamithura

./: .gitignore  ADAPTIVE_LEARNING_SYSTEM.md  ADAPTIVE_MEASUREMENT_QUESTIONS.md  AR_CAMERA_INTEGRATION.md  AR_CAMERA_SUMMARY.md  AR_FEATURE_IMPLEMENTATION.md  AR_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  README.md  adb_monitor.sh  setup_adb.sh  setup_adb_port_forwarding.sh  setup_android_network.sh  setup_enhanced_ar.sh  start_adb_monitor.sh  start_ar_services.sh  start_ar_system.sh  status_adb_monitor.sh  stop_adb_monitor.sh
api-gateway/: README.md  pyproject.toml
api-gateway/api_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
api-gateway/app/: main.py
authentication-service/authentication_service/: auth_service.py
authentication-service/authentication_service.egg-info/: PKG-INFO  SOURCES.txt
authentication_service/: README.md  auth_service.py  pyproject.toml
authentication_service/authentication_service.egg-info/: SOURCES.txt  requires.txt
common/database/: database.py
frontend/: pubspec.yaml
ganithamithura/: .flutter-plugins-dependencies  pubspec.yaml  rebuild_app.sh
ganithamithura/.dart_tool/: package_config.json  package_graph.json
ganithamithura/android/: local.properties
ganithamithura/lib/: main.dart
measurement-service/: README.md
measurement-service/app/: __init__.py  main.py
number-service/: digit_recognition_service.py  main.py  object_detection_service.py  requirements.txt
shape-service/: pyproject.toml
shape-service/app/: main.py
shape-service/app/controllers/: game_controller.py  shapes_controller.py  shapes_detection.py  user_controller.py
shape-service/app/endpoints/: endpoints.py
shape-service/app/models/: model.py
shape-service/app/services/: auth_service.py  shape_predict.py
shape-service/database/: database.py
shape-service/shape_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shape-service/tests/: test_endpoints.py
shape_service/: README.md  list_routes.py  pyproject.toml
shape_service/app/: database.py  main.py
shape_service/app/constants/: constants.py
shape_service/app/controllers/: game_controller.py  report_controller.py  shapes_controller.py  shapes_detection.py
shape_service/app/endpoints/: endpoints.py
shape_service/app/models/: model.py
shape_service/shape_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
symbol-service/: DOCUMENTATION_INDEX.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  MODELS_DETAILED_GUIDE.md  MODEL_COMPARISON_CHART.md  QUEUE_SYSTEM_IMPROVEMENTS.md  QUICK_START.md  README.md  main.py  perfromaceMetrix.md  predict_performance.py  requirements.txt
unit-rag-service/: .env.example  .gitignore  API_ENDPOINTS.md  GRADE_ADAPTIVE_SYSTEM.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MONGODB_SETUP.md  README.md  SETUP_GUIDE.md  check_openai_credits.py  check_questions_db.py  check_student_answers.py  cleanup_short_answer_questions.py  list_models.py  requirements.txt  start.sh  test_integration.py
user_management_service/: pyproject.toml
(+173 files in other folders)
