[project]
name = "shape-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dilshan Kumara", email = "140689829+Dilshankumara0122@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "motor>=3.7.1",
    "uvicorn[standard]>=0.38.0",
    "numpy",
    "Pillow",
    "transformers",
    "python-multipart",
    "torch",
    "pytest",
    "httpx",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2,bcrypt]>=1.7.4",
]

[project.scripts]
shape-service = "app.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]